--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,9 +15,13 @@
 	width: 100px;
     margin-left: 15px;
     margin-right: 15px;
-	padding-top: 10px;
-	
+margin-top: -98px;
+color: white;
+	width: 70px
+
+
 }
+
 .location_deliver{
 	display: flex;
 	flex-direction: row;
@@ -70,15 +74,15 @@ border-radius: 4px;
 }
 
 .header_search_btn{
+	width: 30px;
 	padding: 5px;
-	position: absolute;
-	right: 393px;
-	background-color: orange;
 	border: none;
 	margin-top: 2px;
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
-	padding-left: 12px
+	padding-left: 2px;
+	height: 37px;
+	margin-right: 8px;
 }
 
 .header_searchicon{
@@ -93,6 +97,7 @@ border-radius: 4px;
 	font-weight: bolder;
 	cursor: pointer;
 	padding: 10px 0;
+	width: 50px;
 	margin-top: 5px;
 margin-right: 7px;
 }
