--- a/src/components/homePage/home.css
+++ b/src/components/homePage/home.css
@@ -1,8 +1,11 @@
 .home{
+
 	margin-left: auto;
 	margin-right: auto;
 	object-fit: contain;
-	margin-bottom: 210px
+	width: 100%;
+	height: 100vh;
+	background-color: #fff124
 
 }
 
@@ -10,7 +13,6 @@
 	background-size: cover;
 width: 100%;
 background-size: cover;
-height: 500px;
 background:linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
 position: relative;
 margin-bottom: -380px;
@@ -21,7 +23,7 @@ z-index: -1;
 	display: flex;
 	margin: 3px;
 	margin-bottom: 10px;
-	top:360px;
+	top:160px;
 	position: absolute;
 	left:20px
 
