--- a/src/components/products/product.css
+++ b/src/components/products/product.css
@@ -4,47 +4,91 @@
 
 .product{
 width: 100%;
-max-height: 400px;
+max-height: 600px;
 min-width: 150px;
 object-fit: contain;
 	margin:10px;
-	background-color: white;
+	background-color:purple;
 	padding: 15px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
+	text-align: center;
 }
 .product_info{
 
-	margin-top: 5px
+	margin-top: 5px;
+		
+	
 }
-.product img{
+.product_info h3{
+	color: white
+}
+img{
 	width: 100%;
-	max-height: 340px;
+	max-height: 250px;
 	object-fit: contain;
 	margin-top: 20px;
 	margin-bottom: 10px;
-	text-align: center;
-	justify-content: center;
+
 }
 .product p{
 	text-decoration: none;
-	font-size: 10px;
+	font-size: 15px;
+	color: white
 
 }
 .product p:hover{
 text-decoration: underline;
 }
 .product img{
-	padding: 5px;
 }
-.product button{
-	background-color: greenyellow;
+.quantity_input{
+	height: 25px;
+	width: 60px;
+	margin-bottom: 10px;
+	text-align: center;
+	font-weight: bold
+}
+.buttons{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 10px
+}
+ button{
+
+	background-color: royalblue;
 	padding: 2px;
 	margin-bottom: 10px;
 	border-radius: 2px;
-	color: green;
-	min-width: 100px;
-	width: 90%;
-	justify-content: center;
+	color: #FFFF;
+	width: 40%;
+	cursor: pointer;
+	border-radius: 2px;
+	border: none;
+	height: 26px;
+	outline: none
+
+}
+button:hover{
+	background-color: yellow;
+	color:gray;
+}
+
+
+h3 {
+	color:black;
+}
+
+.add{
+	height: 25px;
+	margin: 0 4px;
+	width: 25px;
+	background-color: blue;
+	color: white;
+	cursor: pointer;
+	border-radius: 3px;
+	border: none;
+
 }
